# plotly_utility

./: .gitignore  README.md  pyproject.toml  setup.py
plotly_utility/: __init__.py  mpl_utils.py  offline.py
plotly_utility/express/: __init__.py  _core.py  _histogram.py  _ridgeline_plot.py  _scatter.py  _scatter_matrix.py
plotly_utility/subplots/: __init__.py
plotly_utility/traces/: uncertainty.py
src/plotly_utility/: __init__.py  mpl_utils.py  offline.py
src/plotly_utility/express/: __init__.py  _core.py  _histogram.py  _ridgeline_plot.py  _scatter.py  _scatter_matrix.py
src/plotly_utility/subplots/: __init__.py
src/plotly_utility/traces/: __init__.py  uncertainty.py
src/plotly_utility/utils/: __init__.py  mapbox.py
src/test/: px_histogram.py  px_ridgeline_plot.py  px_scatter.py  px_scatter_plot.py  secondary_axis.py
src/test/subplots/: residual_plot.py  vstack.py  vstack_alternately.py
test/: px_histogram.py  px_ridgeline_plot.py  px_scatter.py  px_scatter_plot.py  secondary_axis.py
test/subplots/: residual_plot.py  vstack.py  vstack_alternately.py
